@@ -220,5 +220,9 @@
 			<GenericName>libtool</GenericName>
 			<PackageName>sys-devel/libtool</PackageName>
 		</Package>
+		<Package>
+			<GenericName>suitesparse</GenericName>
+			<PackageName>sci-libs/suitesparse</PackageName>
+		</Package>
 	</ExternalDependencies>
 </PhoronixTestSuite>
