@@ -217,5 +217,9 @@
 			<GenericName>superlu</GenericName>
 			<PackageName>superlu</PackageName>
 		</Package>
+		<Package>
+			<GenericName>suitesparse</GenericName>
+			<PackageName>suitesparse-devel</PackageName>
+		</Package>
 	</ExternalDependencies>
 </PhoronixTestSuite>
